--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,67 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradiente_background"
+    android:orientation="vertical"
     android:theme="@style/Theme.7ART.NoActionBar"
-    tools:context=".view.login.activities.LoginActivity"
-    android:background="@drawable/background_login">
+    tools:context=".view.login.activities.LoginActivity">
 
     <ImageView
-        android:id="@+id/cameraLogo"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        app:layout_constraintBottom_toTopOf="@+id/art"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:srcCompat="@drawable/camera_logologo_7art" />
-
-    <ImageView
-        android:id="@+id/art"
+        android:id="@+id/logo_7art"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginVertical="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_7art" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="160sp"
+        android:background="@drawable/black_card_top_rounded"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/artlogo_7art" />
+        app:layout_constraintTop_toBottomOf="@id/logo_7art"
+        app:layout_constraintVertical_bias="1.0">
 
-    <Button
-        android:id="@+id/button_sign_in_login"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/bebas_neue_regular"
-        android:gravity="center"
-        android:text="SIGN IN"
-        android:textColor="@color/white"
-        android:textSize="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_sign_up_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.965" />
+        <Button
+            android:id="@+id/button_sign_in_login"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginHorizontal="26sp"
+            android:layout_marginVertical="40sp"
+            android:fontFamily="@font/bebas_neue_regular"
+            android:gravity="center_horizontal"
+            android:text="@string/sign_in"
+            android:textColor="@color/white"
+            android:textSize="32sp" />
 
-    <Button
-        android:id="@+id/button_sign_up_login"
-        style="?android:attr/borderlessButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/bebas_neue_regular"
-        android:gravity="center"
-        android:text="SIGN UP"
-        android:textColor="@color/white"
-        android:textSize="35dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.93" />
+        <Button
+            android:id="@+id/button_sign_up_login"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginHorizontal="26sp"
+            android:layout_marginVertical="40sp"
+            android:fontFamily="@font/bebas_neue_regular"
+            android:gravity="center_horizontal"
+            android:text="@string/sign_up"
+            android:textColor="@color/white"
+            android:textSize="32sp" />
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
