--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.7ART.NoActionBar"
-    android:background="@drawable/background_bw">
+    android:background="@color/black"
+    android:theme="@style/Theme.7ART.NoActionBar">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_sign_in"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:background="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:onClick="back"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.027"
         app:navigationIcon="@drawable/abc_vector_test"
-        android:onClick="back">
-
+        android:paddingVertical="8sp">
 
         <TextView
             android:id="@+id/sign_in"
@@ -28,103 +26,101 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:fontFamily="@font/bebas_neue_regular"
-            android:foregroundGravity="center"
             android:gravity="center"
-            android:text="SIGN IN"
+            android:text="@string/sign_in"
             android:textAllCaps="true"
             android:textColor="@color/white"
-            android:textSize="60sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.027" />
+            android:textSize="48sp"/>
 
     </com.google.android.material.appbar.MaterialToolbar>
 
-    <EditText
-        android:id="@+id/username_sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="18"
-        android:inputType="textPersonName"
-
-        tools:text="@string/username"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@drawable/white_card_top_rounded"
+        android:orientation="vertical"
+        android:layout_marginTop="8sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_sign_in"
-        app:layout_constraintVertical_bias="0.1" />
-
-    <EditText
-        android:id="@+id/password_sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="18"
-        android:inputType="textPassword"
-        tools:text="@string/password"
-
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/username_sign_in"
-        app:layout_constraintVertical_bias="0.001" />
+        app:layout_constraintTop_toBottomOf="@id/toolbar_sign_in"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-    <Button
-        android:id="@+id/button_log_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="LOG IN"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_sign_in"
-        app:layout_constraintVertical_bias="0.2" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="32dp"/>
 
-    <TextView
-        android:id="@+id/textLog"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="LOG IN WITH"
-        android:textColor="@color/black"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_log_in"
-        app:layout_constraintVertical_bias="0.2" />
+        <EditText
+            android:id="@+id/username_sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20sp"
+            android:layout_marginTop="24sp"
+            android:ems="18"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            android:layout_gravity="center_horizontal"/>
 
-    <ImageView
-        android:id="@+id/google_sign_in"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.35"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85"
-        app:srcCompat="@drawable/google_logo" />
+        <EditText
+            android:id="@+id/password_sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24sp"
+            android:layout_marginHorizontal="20sp"
+            android:ems="18"
+            android:hint="@string/password"
+            android:inputType="textPassword"/>
 
-    <ImageView
-        android:id="@+id/facebook_sign_in"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:onClick="signInFace"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.65"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.85"
-        app:srcCompat="@drawable/facebook_logo" />
+        <Button
+            android:id="@+id/button_log_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24sp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/black_border_black_background_2dpcorner"
+            android:text="@string/login"
+            android:textAllCaps="false"
+            android:textSize="24sp"
+            android:textColor="@color/white"
+            android:paddingHorizontal="36sp"/>
+
+        <TextView
+            android:id="@+id/textLog"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/log_in_with"
+            android:textSize="18sp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="144sp"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal">
+
+            <ImageView
+                android:id="@+id/google_sign_in"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                app:srcCompat="@drawable/google_logo"
+                android:layout_marginVertical="16sp"
+                android:layout_marginHorizontal="16sp"/>
+
+            <ImageView
+                android:id="@+id/facebook_sign_in"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
+                android:onClick="signInFace"
+                app:srcCompat="@drawable/facebook_logo"
+                android:layout_marginVertical="16sp"
+                android:layout_marginHorizontal="16sp"
+                android:visibility="visible"/>
+
+
+        </LinearLayout>
+
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
