--- a/app/src/main/res/layout/activity_movies_recommendations.xml
+++ b/app/src/main/res/layout/activity_movies_recommendations.xml
@@ -96,6 +96,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <TextView
         android:id="@+id/sinopse_abreviada"
         android:layout_width="match_parent"
@@ -107,15 +108,23 @@
         android:textSize="18sp"
         android:fontFamily="@font/nunito_semibold"/>
 
-    <TextView
-        android:id="@+id/movie_disclaimer"
-
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="10dp"
-        android:fontFamily="@font/nunito_semibold"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:justificationMode="inter_word"/>
+        android:scrollbarTrackVertical="@color/black">
+
+        <TextView
+            android:id="@+id/movie_disclaimer"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="18dp"
+            android:layout_marginVertical="24dp"
+            android:fontFamily="@font/nunito_semibold"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:justificationMode="inter_word"/>
+
+    </ScrollView>
+
 
 </LinearLayout>
